# ma-cantine

./: ._env  .djlintrc  .env.docker  .env.local  .flake8  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  Beta_Test_Lycee_Barbezieux  CHANGELOG.md  CLAUDE.md  CR-restau-co_fnh.md  CR_atelier_Ishan.md  Dockerfile  LICENSE  Makefile  ONBOARDING.md  Procfile  README.md  compose.yaml  local-build.sh  main.py  manage.py  package.json  pyproject.toml  release-notes.md  release-please-config.json  requirements.txt  shell.nix
.github/: auto_add_assignees.yml  auto_add_reviewers.yml  auto_assign.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG.yml
.github/workflows/: clever-cloud-review-app.yml  codeql-analysis.yml  main.yml  pr-auto-assign.yml  pr-auto-reviewers-and-assignee.yml  release-please-pr-title-check.yml  release-please.yml  test-dependabot-builds.yml  test-frontend-builds.yml
2024-frontend/: .eslintrc.cjs  .prettierrc.json  Dockerfile  README.md  jsconfig.json  package-lock.json  package.json  vite.config.js
2024-frontend/src/: App.vue  constants.js  i18n.js  main.js  utils.js  validators.js
Ressources/: CR-ATELIER-unplusbio-ecocert-agores-allerplusloinquegalim.md  CR-ademe-bureauetudes-argile.md  CR-agores-ecocert-unplusbio.md  CR-restau-co_fnh.md  CR_CommerceEquitable  CR_cantineTarnos  Glossaire projet Ma-Cantine.docx  Glossaire.md  Reporting.xlsx  [REVIEW #1].md  donnes-teledeclaration.docx
Ressources/retrospective/: CR_Retro  retro18mars.md
Tests utilisateurs/: Beta-Test_Bailly.md  Beta_Test_Lycee_Barbezieux  Test utilisateurs beta_ville_arles.docx
api/: Procfile  README.md  fetch.js  hooks.py  index.js  middleware.py  package-lock.json  package.json  permissions.py  server.js  start.js  urls.py  utils.py  views.py
api/application/: beta-tester.js  beta-tester.test.js  create-canteen.js  create-user-and-canteen.js  create-user.js  login.js  sign-up.js  subscribe-beta-tester.js  validation.js
api/config/: config.js
api/controllers/: login.js  sign-up.js  utils.js
api/database/: models.js
api/domain/: errors.js
api/exceptions/: __init__.py  duplicateexception.py
api/filters/: statistics.py  utils.py
api/infrastructure/: errors.js  postgres-database.js
api/migrations/: 20210430080113-make-canteen-table.js  20210430081717-make-user-table.js  20210430083904-make-login-token-table.js  20210503134346-make-diagnostic-table.js  20210510173529-update-canteen-table.js  20210513195833-add-meal-count.js  20210531101508-add-canteen-siret-management.js
api/serializers/: __init__.py  blogpost.py  blogtag.py  canteen.py  communityevent.py  diagnosis.py  diagnostic.py  diagnostic_teledeclaration.py  diagnosticcanteen.py  managerinvitation.py  message.py  partner.py  partnertype.py  password.py  provisionalmanager.py  purchase.py  reservationexpe.py  resourceaction.py  review.py  sector.py  statistics.py  teledeclaration.py  user.py  utils.py  vegetarianexpe.py  videotutorial.py  wasteaction.py  wastemeasurement.py
api/spec/: beta-tester-spec.js
api/templates/: canteen_claim.html  canteen_join_request.html  canteen_not_found.html  contact-canteen.html  contact-canteen.txt  contact_canteen.html  contact_canteen.txt  manager-invitation.html  manager-invitation.txt  pending_message.html  poster_pdf.html  subscription-beta-tester.html  subscription-beta-tester.txt  subscription_beta_tester.html  subscription_beta_tester.txt  teledeclaration_pdf.html  unusual_diagnostic_import_file.html
api/templatetags/: diagnostic_extras.py  dictionary_extras.py
api/tests/: beta-tester.test.js  test-helper.js  test_blog_posts.py  test_blog_tags.py  test_canteen_action.py  test_canteen_export.py  test_canteen_groupe.py  test_canteen_ministries.py  test_canteen_not_found.py  test_canteen_published.py  test_canteen_relation_central_satellite.py  test_canteen_statistics.py  test_canteen_status.py  test_canteen_territory.py  test_canteens.py  test_canteens_create_import.py  test_canteens_import.py  test_canteens_managers_import.py  test_canteens_schema_import.py  test_canteens_update_import.py  test_community_events.py  test_communityevents.py  test_contact_canteen.py  test_diagnosis.py  test_diagnostic_teledeclaration.py  (+41 more)
clevercloud/: manifest.json  pre-build-hook.sh  pre-build-review-app-hook.sh  python.json  test-build-with-vue3.sh  test-build.sh
cms/: api.py  factories.py  tests.py  wagtail_hooks.py
common/: admin.py  api_insee.py  models.py
data/: apps.py  department_choices.py  fields.py  region_choices.py  signals.py  utils.py
dbt/: .gitignore  README.md  dbt_project.yml  profiles.yml
docs/: ONBOARDING.md  api.html  celery.md  deployment-logs.md  docker.md  documentation_schema_cantine.md  documentation_schema_teledeclaration.md  geo.md  matomo.md  redis.md  restore_backup.md  schema_cantine.md  schema_teledeclaration.md  teledeclaration_campaign.md  teledeclaration_versions.md  teledelaration_versions.md
front-end/: README.md  package-lock.json  package.json  vue.config.js
frontend/: .eslintrc.js  .prettierrc  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  vue.config.js
frontend-vue3/: .eslintrc.js  .gitignore  .prettierrc  README.md  jsconfig.json  package-lock.json  package.json  vue.config.js
macantine/: admin.py  asgi.py  backends.py  brevo.py  celery.py  etl.py  extract_open_data.py  sentry.py  settings.py  tasks.py  testrunner.py  urls.py  utils.py  wsgi.py
opendata/: README.md  campagne_td_2021.csv  campagne_td_2022.csv  campagne_td_2023.csv
scripts/: field_gen.py
statistics/: README.md  __init__.py  apps.py  serializers.py  urls.py  views.py
stats/: .gitignore  2023-05-24-bilan-2021.qmd  2023-05-30-comparaison.qmd  2023-06-06-referentiel-cantines.qmd  2023-06-06-referentiel-td.qmd  2023-08-21-bilan-2022.html  2023-08-21-bilan-2022.qmd  README.md  complete_values.sql  dep_region.sql  egalim_hors_bio_one_column.sql  json_to_columns.sql  requirements.txt  schema_cantines.json  schema_cantines.md  sectors.sql  td_2022.sql
web/: forms.py  sitemaps.py  urls.py  views.py
(+2119 files in other folders)
