[project]
name = "ma-cantine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib==1.3.2",
    "celery==5.4.0",
    "chardet==5.2.0",
    "datacompy==1.0.0a5",
    "django==5.2.14",
    "django-anymail==12.0",
    "django-celery-results==2.5.1",
    "django-ckeditor==6.7.1",
    "django-csp==3.8",
    "django-debug-toolbar==4.4.6",
    "django-dirtyfields==1.9.8",
    "django-extensions==4.1",
    "django-filter==24.3",
    "django-magicauth",
    "django-oauth-toolkit==3.0.1",
    "django-otp==1.5.2",
    "django-simple-history==3.7.0",
    "django-storages==1.14.4",
    "django-vite-plugin==4.1.2",
    "django-webpack-loader==3.1.0",
    "djangorestframework==3.16.1",
    "djangorestframework-camel-case==1.4.2",
    "drf-base64==2.0",
    "drf-excel==2.4.1",
    "drf-spectacular==0.29.0",
    "drf-spectacular-sidecar==2026.1.1",
    "factory-boy==3.3.3",
    "faker==27.0.0",
    "freezegun==1.5.2",
    "html2text==2024.2.26",
    "ipython>=9.5.0",
    "numpy==2.4.1",
    "pandas==3.0.0",
    "pillow==10.4.0",
    "pre-commit==4.0.1",
    "psycopg2-binary>=2.9.10",
    "pytest==8.0.0",
    "pytest-django==4.8.0",
    "python-dotenv==1.0.1",
    "redis==5.2.0",
    "requests==2.32.4",
    "requests-mock==1.12.1",
    "ruff>=0.14.2",
    "sentry-sdk==2.10.0",
    "sib-api-v3-sdk==7.6.0",
    "sqlalchemy==2.0.36",
    "wagtail==7.0.7",
    "xhtml2pdf==0.2.16",
]

[tool.uv.sources]
django-magicauth = { git = "https://github.com/betagouv/django-magicauth.git", rev = "51f4709d8593016ac67428a87bbd2810070ae288" }


[tool.ruff]
line-length = 119
exclude = [".git", "__pycache__", "docs/source/conf.py", "build", "dist", "migrations", "media", "fixtures", "requirements", "static", "assets"]
